<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/textview_create_new_account_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/string_create_new_account_heading"
            android:textColor="@color/color_create_new_account_heading"
            android:textSize="24sp"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_email_id" />

            <EditText
                android:id="@+id/editText_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/string_first_name"
                android:textSize="18sp"
                android:inputType="textCapWords"
                android:textColorHint="@color/color_text_hint_color"
                android:textColor="@color/color_text_color_general"
                android:background="@null"
                android:paddingLeft="30dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp" />

            <EditText
                android:id="@+id/editText_last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/string_last_name"
                android:textSize="18sp"
                android:inputType="textCapWords"
                android:textColorHint="@color/color_text_hint_color"
                android:textColor="@color/color_text_color_general"
                android:background="@null"
                android:paddingLeft="30dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_phone" />

            <EditText
                android:id="@+id/editText_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/string_phone_number"
                android:textSize="18sp"
                android:inputType="phone"
                android:textColorHint="@color/color_text_hint_color"
                android:textColor="@color/color_text_color_general"
                android:background="@null"
                android:paddingLeft="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_name" />

            <EditText
                android:id="@+id/editText_email_id_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/string_email_id_sign_up"
                android:textSize="18sp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/color_text_hint_color"
                android:textColor="@color/color_text_color_general"
                android:background="@null"
                android:paddingLeft="30dp"/>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_pass" />

            <EditText
                android:id="@+id/editText_pass_sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/string_password_sign_up"
                android:textSize="18sp"
                android:inputType="text"
                android:textColorHint="@color/color_text_hint_color"
                android:textColor="@color/color_text_color_general"
                android:background="@null"
                android:paddingLeft="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_job"
                android:layout_marginRight="22dp"/>
            <Spinner
                android:id="@+id/spinner_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:popupBackground="#C9C7B2"
                android:backgroundTint="#FFFFFF" />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:paddingTop="10dp">-->

<!--            <ImageView-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:src="@drawable/ic_action_birthdate" />-->

<!--&lt;!&ndash;            <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                android:id="@+id/textview_post"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_width="wrap_content"&ndash;&gt;-->
<!--&lt;!&ndash;                android:layout_height="match_parent"&ndash;&gt;-->
<!--&lt;!&ndash;                android:text="@string/string_post"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textSize="18sp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:textColor="#FFFFFF"&ndash;&gt;-->
<!--&lt;!&ndash;                android:paddingLeft="30dp"&ndash;&gt;-->
<!--&lt;!&ndash;                android:gravity="center_vertical" />&ndash;&gt;-->
<!--            <Spinner-->
<!--                android:id="@+id/spinner_post"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:popupBackground="#C9C7B2"-->
<!--                android:backgroundTint="#FFFFFF" />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_gender_1"
                android:layout_marginRight="22dp"/>

<!--            <TextView-->
<!--                android:id="@+id/textview_gender"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="@string/string_gender"-->
<!--                android:textSize="18sp"-->
<!--                android:textColor="#FFFFFF"-->
<!--                android:paddingLeft="30dp"-->
<!--                android:gravity="center_vertical" />-->

            <Spinner
                android:id="@+id/spinner_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:popupBackground="#C9C7B2"
                android:backgroundTint="#FFFFFF" />


        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:paddingTop="10dp">-->

<!--            <ImageView-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="40dp"-->
<!--                android:src="@drawable/ic_action_gender_1"-->
<!--                android:layout_marginRight="22dp"/>-->
<!--            <TextView-->
<!--                android:id="@+id/textview_birthdate_qqqdd"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="@string/string_birth_of_date"-->
<!--                android:textSize="18sp"-->
<!--                android:textColor="@color/color_text_hint_color"-->
<!--                android:layout_gravity="center_vertical" />-->
<!--            <Spinner-->
<!--                android:id="@+id/spinner_genderttt"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_vertical"-->
<!--                android:popupBackground="#C9C7B2"-->
<!--                android:backgroundTint="#FFFFFF"/>-->
<!--        </LinearLayout>-->

            <!--<TextView-->
                <!--android:id="@+id/edit_text_view_email_id"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:textSize="18sp"-->
                <!--android:text="Gender"-->
                <!--android:gravity="center_vertical"-->
                <!--android:textColor="#96FFFFFF"-->
                <!--android:paddingLeft="30dp"/>-->


        <!--<RadioGroup-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal"-->
            <!--android:paddingLeft="60dp">-->

            <!--<RadioButton-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Male"-->
                <!--android:textSize="16sp"-->
                <!--android:textColor="#ffff"-->
                <!--android:paddingRight="8dp"-->
                <!--android:buttonTint="#ffff"/>-->
            <!--<RadioButton-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Female"-->
                <!--android:textSize="16sp"-->
                <!--android:textColor="#ffff"-->
                <!--android:paddingRight="8dp"-->
                <!--android:buttonTint="#ffff"/>-->
            <!--<RadioButton-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Other"-->
                <!--android:textSize="16sp"-->
                <!--android:textColor="#ffff"-->
                <!--android:buttonTint="#ffff" />-->

        <!--</RadioGroup>-->
        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_shape"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="30dp"
            android:text="@string/string_register"
            android:textSize="18sp"
            android:textColor="@color/color_login_button" />

        <TextView
            android:id="@+id/textview_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/string_log_in"
            android:textSize="18sp"
            android:textColor="@color/color_create_new_account_sign_up"
            android:layout_gravity="center"
            android:foreground="?attr/selectableItemBackgroundBorderless"/>


    </LinearLayout>

</ScrollView>